<resources>
    <string name="app_name">Y2S2 MAD</string>
    <string name="btn_tutes">Tutorials</string>
    <string name="btn_labs">lab sheets</string>
    <string name="tute4">Tutorial 4 - Image Handling</string>
    <string name="txt_construction">Page Under Construction</string>
    <string name="btn_takePhoto">Take a Photo</string>
    <string name="tute6">Tutorial 6 - Firebase</string>
    <string name="btn_save">save</string>
    <string name="btn_show">show</string>
    <string name="btn_update">update</string>
    <string name="btn_delete">delete</string>
    <string name="tute2">Tutorial 2 - Lifecycle</string>
    <string name="Msg1">Here, I am the text message 1</string>
    <string name="Msg2">Here, I am the text message 2</string>
    <string name="tute5">Tutorial 5 - Data Handling</string>
    <string name="tv_username">"Username: "</string>
    <string name="tv_password">Password:</string>
    <string name="btn_selectAll">select all</string>
    <string name="btn_add">add</string>
    <string name="btn_signin">sign in</string>
    <string name="lab4">Labsheet 4 - Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_fragment1">fragment 1</string>
    <string name="btn_fragment2">fragment 2</string>
    <string name="tute7">Tutorial 7 - Kotlin</string>
    <string name="t7_title">Enter your year of birth</string>
    <string name="btn_submit">submit</string>
    <string name="t7_title_year">Your age in years:</string>
    <string name="l12_app_title">The CourseApp</string>
    <string name="btn_register">register</string>
    <string name="lab12">Labsheet 12 - Practice Lab</string>
    <string name="title_register_form">Register Form</string>
    <string name="title_teacher">Teacher</string>
    <string name="title_Student">Student</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_subject">Subject</string>
    <string name="btn_send">Send</string>
    <string name="btn_cancel">cancel</string>
    <string name="lab5">labsheet 5 - notifications</string>
</resources>