<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".All_Tutorials.T5_DataHandling">

    <TextView
        android:id="@+id/t5_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="70dp"
        android:text="@string/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t5_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/tv_password"
        app:layout_constraintStart_toStartOf="@+id/t5_tv_username"
        app:layout_constraintTop_toBottomOf="@+id/t5_tv_username" />

    <EditText
        android:id="@+id/t5_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/t5_tv_username"
        app:layout_constraintStart_toEndOf="@+id/t5_tv_username" />

    <EditText
        android:id="@+id/t5_et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/t5_tv_password"
        app:layout_constraintEnd_toEndOf="@+id/t5_et_username" />

    <Button
        android:id="@+id/t5_btn_selectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:text="@string/btn_selectAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t5_et_password" />

    <Button
        android:id="@+id/t5_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toStartOf="@+id/t5_btn_signIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t5_tv_password" />

    <Button
        android:id="@+id/t5_btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signin"
        app:layout_constraintBaseline_toBaselineOf="@+id/t5_btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t5_btn_add" />

    <Button
        android:id="@+id/t5_btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        app:layout_constraintBaseline_toBaselineOf="@+id/t5_btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/t5_btn_delete" />

    <Button
        android:id="@+id/t5_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_delete"
        app:layout_constraintEnd_toStartOf="@+id/t5_btn_update"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t5_btn_add" />
</androidx.constraintlayout.widget.ConstraintLayout>